--- a/Views/Client/AddAnimal.cshtml
+++ b/Views/Client/AddAnimal.cshtml
@@ -1,1 +1,129 @@
 ﻿@model ClientDataViewModel
+@inject ClaimHelper claimHelper
+
+@{
+    var AnimalTypes = (Model.AnimalTypes!.ToList())!;
+    var possibleGenders = new char[] { 'F', 'M' };
+}
+
+@section ScriptsAndStylesheets
+{
+    <link rel="stylesheet" href="~/css/baseforms.css" />
+    <link rel="stylesheet" href="~/css/animals.css" />
+}
+
+@section Main
+{
+    <span class="form__header-span text-highlight">Your new Animal</span>
+    <section class="aform__section">
+        <form class="form2-cont" asp-action="AddAnimal" asp-controller="Client" enctype="multipart/form-data">
+            <input asp-for="Login" type="hidden" />
+            <input asp-for="LastName" type="hidden" />
+            <input asp-for="FirstName" type="hidden" />
+            <input asp-for="PhoneNumber" type="hidden" />
+
+            <input asp-for="ActiveAnimal!.OwnerId" value="@Model.SubUserId" type="hidden"/>
+
+            <div class="form2_els-wrapper">
+                <div class="amodal2__column l1">
+                    <div class="amodal2__row">
+                        <label asp-for="ActiveAnimal!.Name" class="profile__form-lbl aform__lbl-position">Name*</label>
+                        <input class="form__input-txt aform__input-position" type="text" asp-for="ActiveAnimal!.Name" />
+                        <span asp-validation-for="ActiveAnimal!.Name"></span>
+                    </div>
+                    <div class="amodal2__row">
+                        <label asp-for="ActiveAnimal!.Age" class="profile__form-lbl aform__lbl-position">Age*</label>
+                        <input class="form__input-num aform__input-position" type="number" asp-for="ActiveAnimal!.Age" 
+                            min="1" max="50" step="1"/>
+                        <span asp-validation-for="ActiveAnimal!.Age"></span>
+                    </div>
+                    <div class="amodal2__row">
+                        <label asp-for="ActiveAnimal!.TypeId" class="profile__form-lbl aform__lbl-position">Type*</label>
+                        <select class="form__input-select aform__input-position" asp-for="ActiveAnimal!.TypeId">
+                            @for (int i = 0; i < AnimalTypes.Count; i++)
+                            {
+                                @if ((Model.ActiveAnimal!.TypeId != default(short) && AnimalTypes[i].Id == Model.ActiveAnimal!.TypeId))
+                                {
+                                    <option value="@AnimalTypes[i].Id" selected>@AnimalTypes[i].Name</option>
+                                }
+                                else if (i == 0)
+                                {
+                                    <option value="@AnimalTypes[i].Id" selected>@AnimalTypes[i].Name</option>
+                                }
+                                else
+                                {
+                                    <option value="@AnimalTypes[i].Id">@AnimalTypes[i].Name</option>
+                                }
+
+                            }
+                        </select>
+                    </div>
+                </div>
+                <div class="amodal2__column r1">
+                    <div class="amodal2__row">
+                        <label class="profile__form-lbl aform__lbl-position">Owner</label>
+                        <input class="form__input-txt aform__input-position" type="text" value="@claimHelper.GetClaimValue(ClaimTypes.Name)" readonly>
+                    </div>
+                    <div class="amodal2__row">
+                        <label asp-for="ActiveAnimal!.Weight" class="profile__form-lbl aform__lbl-position">Weight*</label>
+                        <input class="form__input-num aform__input-position" type="number" asp-for="ActiveAnimal!.Weight"
+                               min="0.1" max="30" step="0.1" />
+                        <span asp-validation-for="ActiveAnimal!.Weight"></span>
+                    </div>
+                    <div class="amodal2__row">
+                        <label class="profile__form-lbl aform__lbl-position" asp-for="ActiveAnimal!.Sex">Sex*</label>
+                        <select class="form__input-select aform__input-position" asp-for="ActiveAnimal!.Sex">
+                            @for (int i = 0; i < possibleGenders.Length; i++)
+                            {
+                                @if (Model.ActiveAnimal!.Sex == possibleGenders[i])
+                                {
+                                    <option value="@possibleGenders[i]" selected>@possibleGenders[i]</option>
+                                }
+                                else if (i == 0)
+                                {
+                                    <option value="@possibleGenders[i]" selected>@possibleGenders[i]</option>
+                                }
+                                else
+                                {
+                                    <option value="@possibleGenders[i]">@possibleGenders[i]</option>
+                                }
+                            }
+                        </select>
+                    </div>
+                </div>
+
+                <div class="big_input__row c_span2">
+                    <label class="profile__form-lbl big_input-lbl-pos" asp-for="ActiveAnimal!.PhotoPath">Animal Photo</label>
+                    <label for="photo-input" class="for_input-file form__input-file-input big_input-input-pos">
+                        @if (Model.ActiveAnimal!.PhotoPath != null)
+                        {
+                            @Model.ActiveAnimal!.PhotoPath
+                        }
+                        else
+                        {
+                            <span>
+                                Upload animal photo <br />
+                                by clicking on that input <br />
+                                <span class="small__text-blue">+</span>
+                            </span>
+                        }
+                    </label>
+                    <input id="photo-input" class="form__input-file form__input" asp-for="ActiveAnimal!.PhotoPath"
+                       value="@Model.ActiveAnimal!.PhotoPath" type="file" accept="image/png,image/jpeg" />
+                    <span class="big_input-vld-pos" asp-validation-for="ActiveAnimal!.PhotoPath"></span>
+                </div>
+                <div class="big_input__row c_span2">
+                    <label asp-for="ActiveAnimal!.Preferences" class="profile__form-lbl big_input-lbl-pos">Animal Preferences</label>
+                    <textarea asp-for="ActiveAnimal!.Preferences" class="form__input-textarea big_input-input-pos">
+                        @(string.IsNullOrEmpty(Model.ActiveAnimal!.Preferences) ? "Unset" : Model.ActiveAnimal!.Preferences)
+                    </textarea>
+                    <span class="big_input-vld-pos" asp-validation-for="ActiveAnimal!.Preferences"></span>
+                </div>
+            </div>
+            <div class="modal__footer-wrapper">
+                <button class="btn__submit btn" type="submit">Submit</button>
+                <span class="required_fields-span">* Indicates required fields</span>
+            </div>
+        </form>
+    </section>
+}
