--- a/wwwroot/css/animals.css
+++ b/wwwroot/css/animals.css
@@ -1,11 +1,284 @@
+.animal__page-wrapper {
+  margin-bottom: 2%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .animals__header-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.new__animal-btn {
+  font-weight: 500;
+  font-size: 1.1rem;
+  text-decoration: none;
+  color: var(--color-dark);
 }
 
 .an_page-title {
+  font-weight: 500;
+  font-size: 1.6rem;
+}
+
+.animals_cont-align {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .animals__wrapper {
+  margin-top: 2%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  min-height: calc(var(--index) * 15);
 }
 
+.animal__wrapper {
+  margin-bottom: 1%;
+  width: calc(var(--index) * 14);
+  height: calc(var(--index) * 18);
+  background-color: white;
+  border-radius: calc(var(--index));
+  box-shadow: 1px 1px 4px #50504f8d;
+  overflow: hidden;
+}
+
+.card__info-container {
+  display: flex;
+  flex-direction: column;
+  padding: calc(var(--index) * 0.5) calc(var(--index) * 0.7);
+}
+
+.animal__photo {
+  width: inherit;
+  border-bottom: 2px solid rgba(133, 127, 127, 0.186);
+}
+
+.animal__name {
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+
+.animal__type {
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+
+.attr__name {
+  font-weight: 500;
+}
+
+.acard__row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.no_animals-wrapper {
+  margin: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .no_animals-title {
+  font-size: 2.2rem;
+  font-weight: 500;
+  text-align: center;
+  line-height: 200%;
+}
+
+.no_animals-img {
+  width: calc(var(--index) * 6);
+}
+
+.show__btn-align {
+  width: fit-content;
+  margin-left: 5%;
+}
+
+.amodal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: whitesmoke;
+  width: calc(var(--index) * 22);
+  height: calc(var(--index) * 28);
+  box-shadow: 0 4rem 6rem rgba(0, 0, 0, 0.3);
+  transition: all 0.5s;
+  z-index: 200;
+  padding: calc(var(--index) * 3) calc(var(--index) * 2);
+}
+
+.amodal_header-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal_animal_image-cont {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: calc(var(--index) * 3);
+  width: calc(var(--index) * 3);
+  border: 1px solid black;
+  border-radius: calc(var(--index));
+  overflow: hidden;
+}
+
+.modal_animal_image {
+  height: calc(var(--index) * 3);
+  width: calc(var(--index) * 3);
+}
+
+.amodal_header {
+  font-weight: 500;
+  font-size: 1.6rem;
+}
+
+.form_els-wrapper {
+  height: 80%;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr) repeat(2, 2fr);
+  row-gap: 2%;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3%;
+}
+
+.amodal__row {
+  display: grid;
+}
+
+.amodal__column {
+  grid-row: 1/4;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.l1 {
+  grid-column: 1;
+}
+
+.r1 {
+  grid-column: 2;
+}
+
+.c_span2 {
+  grid-column: 1/3;
+  grid-template-rows: 0.6fr 2fr;
+}
+
+.animal__actions-wrapper {
+  margin-top: 3%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.amodal_delete-msg {
+  font-weight: 500;
+  color: rgb(211, 37, 37);
+}
+
+.form__header-span {
+  display: inline;
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
+.aform__section {
+  margin: 2% 0;
+  height: calc(var(--index) * 31);
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.form2-cont {
+  margin-top: 1%;
+  width: 80%;
+  margin-bottom: 1%;
+}
+
+.form2_els-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3%;
+  row-gap: 5%;
+  grid-template-rows: repeat(3, 1fr) repeat(2, 2fr);
+}
+
+.amodal2__column {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-row: 1/4;
+}
+
+.amodal2__row {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.big_input__row {
+  display: grid;
+  grid-template-rows: 1fr 4fr;
+  grid-template-columns: repeat(7, 1fr);
+}
+
+.big_input-lbl-pos {
+  grid-row: 1;
+  grid-column: 1/3;
+}
+
+.big_input-vld-pos {
+  grid-column: 3/8;
+  grid-row: 1;
+}
+
+.big_input-input-pos {
+  grid-column: 1/8;
+  grid-row: 2;
+}
+
+.aform__input-position {
+  grid-row: 2;
+}
+
+.aform__lbl-position {
+  grid-row: 1;
+}
+
+.aform_vld-position {
+  grid-row: 3;
+}
+
+.modal__footer-wrapper {
+  display: flex;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.required_fields-span {
+  font-weight: 700;
+}
+
+.btn__submit {
+  font-weight: 500;
+  font-size: 1.1rem;
+}
+
+.btn__mt {
+  margin-top: 2%;
 }
