--- a/wwwroot/css/baseforms.css
+++ b/wwwroot/css/baseforms.css
@@ -26,6 +26,35 @@ input[readonly] {
   pointer-events: none;
 }
 
+.form__input-range {
+  overflow: visible;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 90%;
+  background-color: #bdc3c7;
+  border-radius: 5px;
+  outline: 0;
+}
+.form__input-range::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  background: var(--gradient-primary);
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 2px solid var(--color-primary);
+  cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+
+.form__input-range::-webkit-slider-thumb:hover {
+  background: var(--gradient-primary);
+  border: 2px solid var(--color-secondary);
+}
+
+.form__input-range::-webkit-slider-thumb:active {
+  transform: scale(1.6);
+}
+
 .form__input-txt:focus {
   border: none;
   outline: none;
