--- a/wwwroot/css/home_page.css
+++ b/wwwroot/css/home_page.css
@@ -96,13 +96,17 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: calc(var(--index) * 20);
+  height: calc(var(--index) * 18);
   transition: transform 1.2s;
 }
 
 .review {
   width: 65%;
   height: 100%;
+  background-color: white;
+  border-radius: var(--index);
+  box-shadow: 1px 1px 4px #50504f8d;
+  padding: var(--index);
 }
 
 .review::before {
@@ -112,6 +116,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 2px solid rgba(117, 115, 115, 0.39);
 }
 
 .review__user-info {
@@ -134,9 +139,14 @@ header {
 }
 
 .review__user-comment {
-  padding-top: 50%;
-  transform: translateY(-50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+  width: 100%;
+  height: 80%;
+  /* padding-top: 50%; */
+  /* transform: translateY(-50%); */
   font-weight: 400;
   font-size: 1.1rem;
 }
@@ -172,7 +182,7 @@ header {
   position: absolute;
   transform: translateX(-100%);
   display: flex;
-  bottom: 5%;
+  bottom: 3%;
   left: 50%;
   width: min-content;
 }
