--- a/Views/HotelManager/RegisterEmployee.cshtml
+++ b/Views/HotelManager/RegisterEmployee.cshtml
@@ -1,5 +1,12 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@model HotelManagerViewModel
+
+@section ScriptsAndStylesheets
+{
+    <link rel="stylesheet" href="~/css/baseforms.css" />
+    <link rel="stylesheet" href="~/css/employees.css" />
+}
+
+@section Main
+{
+    <h1>Adding employee</h1>
 }
