--- a/Views/UserProfile/EmployeePersonalData.cshtml
+++ b/Views/UserProfile/EmployeePersonalData.cshtml
@@ -55,7 +55,7 @@
                 </div>
                 <div class="form__column ru1">
                     <div class="emp-form__row">
-                        <label class="form__lbl-position profile__form-lbl" asp-for="LastName">First Name</label>
+                        <label class="form__lbl-position profile__form-lbl" asp-for="LastName">Last Name</label>
                         <input class="form__input-txt form_input bg_main-light form__input-position" asp-for="LastName" value="@Model.LastName" readonly />
                         <span class="form__validator-position" asp-validation-for="LastName"></span>
                         <span class="field__edit-btn">
