--- a/Views/HotelManager/Employees.cshtml
+++ b/Views/HotelManager/Employees.cshtml
@@ -14,7 +14,8 @@
     <div class="employees-wrapper">
         <div class="employee_header-wrapper">
             <span class="emp_page-header text-highlight">Employees</span>
-            <a class="add_employee-btn btn" asp-action="RegisterEmployeeView" asp-controller="HotelManager">Hire Employee</a>
+            <a class="add_employee-btn btn" asp-action="RegisterEmployeeView" asp-controller="HotelManager"
+                asp-route-pageIndex="@Model.Employees!.PageIndex">Hire Employee</a>
         </div>
         <div class="employees-cont">
             @foreach (var employee in Model.Employees!)
