--- a/Views/HotelManager/RegisterEmployee.cshtml
+++ b/Views/HotelManager/RegisterEmployee.cshtml
@@ -4,9 +4,127 @@
 {
     <link rel="stylesheet" href="~/css/baseforms.css" />
     <link rel="stylesheet" href="~/css/employees.css" />
+    <script defer type="module" src="/js/register.js"></script>
+}
+
+@{
+    char[] possibleGenders = new char[]{'?', 'M', 'F'};
 }
 
 @section Main
 {
-    <h1>Adding employee</h1>
+    <span class="a_emp-header text-highlight">Employee Registration</span>
+    <form class="a_emp-form-cont" asp-action="RegisterEmployee" asp-controller="HotelManager" method="post" enctype="multipart/form-data">
+        <input asp-for="UserId" type="hidden"/>
+        <input asp-for="Login" type="hidden"/>
+        <input asp-for="PhoneNumber" type="hidden"/>
+        <input asp-for="FirstName" type="hidden"/>
+        <input asp-for="LastName" type="hidden"/>
+
+        <div class="a_emp-els-wrapper">
+            <div class="a_emp_column lu1">
+                <div class="a_emp_row">
+                    <label class="profile__form-lbl aform_lbl-pos" asp-for="NewEmployee!.Login">Login</label>
+                    <input class="form__input-txt aform_inp-pos" asp-for="NewEmployee!.Login" />
+                    <span class="aform_vld-pos" asp-validation-for="NewEmployee!.Login"></span>
+                </div>
+                <div class="a_emp_row">
+                    <label class="profile__form-lbl aform_lbl-pos" asp-for="NewEmployee!.FirstName">First Name</label>
+                    <input class="form__input-txt aform_inp-pos" asp-for="NewEmployee!.FirstName"/>
+                    <span class="aform_vld-pos" asp-validation-for="NewEmployee!.FirstName"></span>
+                </div>
+                <div class="a_emp_row">
+                    <label class="profile__form-lbl aform_lbl-pos" asp-for="NewEmployee!.Password">Password</label>
+                    <input class="form__input-txt aform_inp-pos" asp-for="NewEmployee!.Password" type="password"/>
+                    <span class="aform_vld-pos" asp-validation-for="NewEmployee!.Password"></span>
+                </div>
+            </div>
+            <div class="a_emp_column ru1">
+                <div class="a_emp_row">
+                    <label class="profile__form-lbl aform_lbl-pos" asp-for="NewEmployee!.PhoneNumber">Phone Number</label>
+                    <input class="form__input-txt aform_inp-pos" asp-for="NewEmployee!.PhoneNumber"/>
+                    <span class="aform_vld-pos" asp-validation-for="NewEmployee!.PhoneNumber"></span>
+                </div>
+                <div class="a_emp_row">
+                    <label class="profile__form-lbl aform_lbl-pos" asp-for="NewEmployee!.LastName">Last Name</label>
+                    <input class="form__input-txt aform_inp-pos" asp-for="NewEmployee!.LastName"/>
+                    <span class="aform_vld-pos" asp-validation-for="NewEmployee!.LastName"></span>
+                </div>
+                <div class="a_emp_row">
+                    <label class="profile__form-lbl aform_lbl-pos" asp-for="NewEmployee!.RepeatedPassword">Repeat Password</label>
+                    <input class="form__input-txt aform_inp-pos" asp-for="NewEmployee!.RepeatedPassword" type="password"/>
+                    <span class="aform_vld-pos" asp-validation-for="NewEmployee!.RepeatedPassword"></span>
+                </div>
+            </div>
+            <div class="a_emp-file_row">
+                <label class="fform_lbl-pos profile__form-lbl" asp-for="NewEmployee!.PhotoPath">Your Photo</label>
+                <label for="photo-input" class="for_input-file form__input-file-input form_file-position">
+                    Upload your photo<br />
+                    by clicking on that input<br />
+                    <span class="small__text-blue">+</span>
+                </label>
+                <input id="photo-input" class="form__input-file form__input" asp-for="NewEmployee!.PhotoPath"
+                   value="@Model.NewEmployee!.PhotoPath" type="file" accept="image/png,image/jpeg" />
+                <span class="form__input-file-validator form_file-span" asp-validation-for="NewEmployee!.PhotoPath"></span>
+            </div>
+            <div class="a_emp-type_row">
+                <label asp-for="NewEmployee!.EmployeeTypeId" class="profile__form-lbl aform_lbl-pos">Employee Position</label>
+                <select class="form__input-select aform_inp-pos" asp-for="NewEmployee!.EmployeeTypeId">
+                    @foreach(UserType empType in Model.EmployeeTypes!)
+                    {
+                        @if(empType.Id == Model.NewEmployee!.EmployeeTypeId)
+                        {
+                            <option value="@empType.Id" selected>@empType.Name</option>
+                        }
+                        else
+                        {
+                            <option value="@empType.Id">@empType.Name</option>
+                        }
+                    }
+                </select>
+                <span class="aform_vld-pos" asp-validation-for="NewEmployee!.EmployeeTypeId"></span>
+            </div>
+            <div class="a_emp_column ld1">
+                <div class="a_emp_row">
+                    <label class="profile__form-lbl aform_lbl-pos" asp-for="NewEmployee!.Sex">Sex</label>
+                    <select class="form__input-select aform_inp-pos" asp-for="NewEmployee!.Sex">
+                        @for(int i = 0; i < possibleGenders.Length; i++)
+                        {
+                            @if(Model.NewEmployee!.Sex.Equals(possibleGenders[i]) || i == 0)
+                            {
+                                <option value="@possibleGenders[i]" selected>@possibleGenders[i]</option>
+                            }
+                            else
+                            {
+                                <option value="@possibleGenders[i]">@possibleGenders[i]</option>
+                            }
+                        }
+                    </select>
+                </div>
+                <div class="a_emp_row-date">
+                    <label class="profile__form-lbl aform_lbl-pos" asp-for="NewEmployee!.BirthDate">Birth Date</label>
+                    <input class="form__input-date aform_inp-pos" asp-for="NewEmployee!.BirthDate" type="date" 
+                        value="@(UtilFuncs.DateToHtmlFormatter(Model.NewEmployee!.BirthDate))"/>
+                     <span class="aform_vld-pos" asp-validation-for="NewEmployee!.BirthDate"></span>
+                </div>
+            </div>
+            <div class="a_emp_column rd1">
+                <div class="a_emp_row">
+                    <label class="profile__form-lbl aform_lbl-pos" asp-for="NewEmployee!.Salary">Salary</label>
+                    <input class="form__input-num aform_inp-pos" asp-for="NewEmployee!.Salary" type="number" min="0" max="100000" step="0.1"/>
+                    <span class="aform_vld-pos" asp-validation-for="NewEmployee!.Salary"></span>
+                </div>
+                <div class="a_emp_row-date">
+                    <label class="profile__form-lbl aform_lbl-pos" asp-for="NewEmployee!.HiredSince">Hired Since</label>
+                    <input class="form__input-date aform_inp-pos" type="date" asp-for="NewEmployee!.HiredSince" 
+                    value="@(UtilFuncs.DateToHtmlFormatter(DateTime.Now))" readonly/>
+                </div>
+            </div>
+        </div>
+
+        <div class="form__footer-wrap">
+            <button class="btn__submit btn" type="submit">Submit</button>
+            <span class="all__fields-required">All fields required for successful employee registration</span>
+        </div>
+    </form>
 }
