--- a/wwwroot/css/employees.css
+++ b/wwwroot/css/employees.css
@@ -31,6 +31,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  width: 100%;
 }
 
 .employee_cont-wrapper {
@@ -42,7 +43,7 @@
   text-decoration: none;
   height: calc(var(--index) * 13);
   padding: 1% 2%;
-  width: 18%;
+  width: 19%;
 }
 
 .employee_cont-els {
@@ -185,4 +186,112 @@
 .btn__submit {
   font-weight: 500;
   font-size: 1.2rem;
+}
+
+.a_emp-header {
+  align-self: flex-start;
+  font-size: 1.4rem;
+  font-weight: 500;
+}
+
+.a_emp-form-cont {
+  width: 100%;
+  /* height: calc(var(--index) * 30); */
+  margin: 3.5% 0;
+}
+
+.a_emp-els-wrapper {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 3fr 1fr 1fr 3fr;
+  column-gap: 4%;
+  row-gap: 2%;
+  /* max-height: calc(var(--index) * 30); */
+}
+
+.a_emp_column {
+  display: grid;
+}
+
+.a_emp_row {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.a_emp_row-date {
+  display: grid;
+  grid-template-rows: 0.5fr 1fr 0.5fr;
+}
+
+.a_emp-type_row {
+  display: grid;
+  grid-row: 3;
+  grid-column: 3/5;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.aform_lbl-pos {
+  grid-row: 1;
+}
+
+.aform_inp-pos {
+  grid-row: 2;
+}
+
+.aform_vld-pos {
+  grid-row: 3;
+}
+
+.lu1 {
+  grid-row: 1;
+  grid-column: 1/4;
+}
+
+.ru1 {
+  grid-row: 1;
+  grid-column: 4/7;
+}
+
+.ld1 {
+  grid-row: 4;
+  grid-column: 1/4;
+}
+
+.rd1 {
+  grid-row: 4;
+  grid-column: 4/7;
+}
+
+.a_emp-file_row {
+  display: grid;
+  grid-template-rows: 1fr 3fr;
+  grid-template-columns: repeat(7, 1fr);
+  grid-row: 2;
+  grid-column: 1/7;
+}
+
+.form__input-file-validator {
+  grid-column: 4/8;
+  grid-row: 1;
+}
+
+.form_file-position {
+  grid-row: 2;
+  grid-column: 1/8;
+}
+
+.fform_lbl-pos {
+  grid-row: 1;
+  grid-column: 1/4;
+}
+
+.all__fields-required {
+  font-size: 0.9rem;
+  font-weight: bold;
+}
+
+.form__footer-wrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
