--- a/wwwroot/css/requests.css
+++ b/wwwroot/css/requests.css
@@ -221,3 +221,97 @@ a.disabled {
   margin-top: 2%;
   margin-bottom: 2%;
 }
+
+.mrequests_container {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  min-height: calc(var(--index) * 20);
+}
+
+.mrequest_cont {
+  background-color: white;
+  border-radius: calc(var(--index));
+  box-shadow: var(--base-shadow);
+  color: var(--color-dark);
+  width: 100%;
+  height: calc(var(--index) * 6.5);
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr;
+  grid-template-rows: repeat(3, 1fr);
+  column-gap: 2%;
+  margin-bottom: 2%;
+  text-decoration: none;
+  padding: calc(var(--index));
+}
+
+.request_status-cont {
+  grid-row: 2;
+  grid-column: 1/3;
+}
+
+.mr_request-name {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.request_writing-cont {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  grid-column: 1/3;
+  grid-row: 3;
+}
+
+.mr_req-text {
+  display: grid;
+  grid-template-rows: 1fr 3fr;
+  grid-column: 3;
+  grid-row: 1/4;
+}
+
+.mr_header {
+  width: fit-content;
+}
+
+.mr_form {
+  width: 100%;
+  height: 100%;
+}
+
+.mreq_els-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 2fr;
+  column-gap: 2%;
+  row-gap: 2%;
+  width: 100%;
+  height: 80%;
+}
+
+.mr_form_column {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-row: 1/3;
+}
+
+.mr_form_row {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+}
+
+.mr_form-text {
+  grid-row: 3;
+  grid-column: 1/3;
+  display: grid;
+  grid-template-rows: 0.5fr 2fr;
+}
+
+.mr_form_row-date {
+  display: grid;
+  grid-template-rows: 0.7fr 1fr;
+}
+
+.btn__submit {
+  margin-top: 3%;
+}
